# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("av_codec_format_config") {
  include_dirs = [
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/utils/include",
    "$av_codec_root_dir/services/dfx/include",
    "$media_foundation_root_dir/interface",
    "$media_foundation_root_dir/interface/inner_api/meta",
    "$media_foundation_root_dir/interface/inner_api/cpp_ext",
    "//commonlibrary/c_utils/base/include",
  ]
  cflags = [ "-fexceptions" ]
  cflags_cc = cflags
}

ohos_static_library("av_codec_format") {
  sources = [ "format.cpp" ]
  public_configs = [ ":av_codec_format_config" ]

  defines = []
  defines += av_codec_defines
  deps = [ "$av_codec_root_dir/services/utils:av_codec_service_utils" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("av_codec_service_utils") {
  install_enable = true

  sanitize = av_codec_sanitize

  include_dirs = [
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/utils/include",
    "$av_codec_root_dir/services/dfx/include",
  ]

  sources = [
    "avsharedmemorybase.cpp",
    "task_thread.cpp",
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
