# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("av_codec_media_engine_filters_config") {
  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
  ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-fno-rtti",
    "-Wno-unused-but-set-variable",
    "-Wno-format",
  ]
  cflags_cc = cflags

  include_dirs = [
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/media_engine/modules",
    "$media_foundation_root_dir/interface/inner_api",
    "$media_foundation_root_dir/src",
    "//third_party/ffmpeg",
    "//foundation/multimedia/av_codec/services/media_engine/modules/source/audio_capture"
  ]
}

ohos_shared_library("av_codec_media_engine_filters") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [
    ":av_codec_media_engine_filters_config",
    "$av_codec_root_dir/services/dfx:av_codec_service_log_dfx_public_config",
  ]

  sources = [
    "audio_capture_filter.cpp",
    "codec_filter.cpp",
    "demuxer_filter.cpp",
    "muxer_filter.cpp"
  ]

  deps = [
    "$av_codec_root_dir/services/media_engine/modules:av_codec_media_engine_modules"
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "graphic_2d:sync_fence",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "histreamer:media_foundation_pipeline",
    "histreamer:media_foundation_buffer",
    "histreamer:media_foundation_osal",
    "histreamer:media_foundation_plugin",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
