# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("av_codec_media_engine_modules_config") {
  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
  ]

  cflags = [
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include/",
    "$av_codec_root_dir/services/media_engine/modules/source/audio_capture",
    "$av_codec_root_dir/interfaces",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/media_engine/modules",
    "$media_foundation_root_dir/interface/inner_api",
    "$media_foundation_root_dir/src",
    "//third_party/ffmpeg",
  ]
}

ohos_shared_library("av_codec_media_engine_modules") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [
    ":av_codec_media_engine_modules_config",
    "$av_codec_root_dir/services/dfx:av_codec_service_log_dfx_public_config",
  ]

  sources = [
    "demuxer/data_packer.cpp",
    "demuxer/media_demuxer.cpp",
    "demuxer/type_finder.cpp",
    "source/audio_capture/audio_capture_module.cpp",
    "source/audio_capture/audio_type_translate.cpp",
    "source/source.cpp",
    "media_codec/media_codec.cpp",
    "muxer/media_muxer.cpp",
    "muxer/data_sink_fd.cpp",
    "muxer/data_sink_file.cpp",
    "sink/audio_sink.cpp"
  ]

  public_configs = [
    "//foundation/multimedia/audio_framework/frameworks/native/audiocapturer:audio_capturer_config",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "graphic_2d:sync_fence",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "audio_framework:audio_capturer",
    "histreamer:media_foundation"
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
