# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")
module_output_path = "av_codec/AVCodec_Audio"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"

##############################fuzztest##########################################
ohos_fuzztest("AudioMuxerHevcFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/audiomuxerhevc_fuzzer"
  include_dirs = [
    "$MEDIA_ROOT_DIR/test/fuzztest/audiomuxerhevc_fuzzer",
    "$MEDIA_ROOT_DIR/test/nativedemo/avmuxer",
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/services/services/factory",
    "$MEDIA_ROOT_DIR/services/engine/plugin/common",
    "$MEDIA_ROOT_DIR/services/engine/plugin/core",
    "$MEDIA_ROOT_DIR/services/engine/plugin/interface",
    "$MEDIA_ROOT_DIR/services/utils",
    "$MEDIA_ROOT_DIR/services/engine/plugin/plugins/muxer/ffmpeg_muxer",
    "$MEDIA_ROOT_DIR/frameworks/native/capi/common",
    "$MEDIA_ROOT_DIR/services/dfx/include",
    "$MEDIA_ROOT_DIR/services/engine/base/include",
    "$MEDIA_ROOT_DIR/services/engine/codec/include/video",
    "$MEDIA_ROOT_DIR/services/engine/common/include",
    "$MEDIA_ROOT_DIR/services/engine/source/hst_releated",
    "$MEDIA_ROOT_DIR/services/services/factory",
    "$MEDIA_ROOT_DIR/services/utils/include",
    "$MEDIA_ROOT_DIR/test/nativedemo/include",
    "$MEDIA_ROOT_DIR/test/unittest/avmuxer_test/mpeg4_plugin",
    "$MEDIA_ROOT_DIR/test/unittest/avmuxer_test",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/track",
    "$MEDIA_ROOT_DIR/interfaces/plugin",
    "$MEDIA_ROOT_DIR/services/media_engine/modules/muxer",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  mpeg4_sources = [
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/track/audio_track.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/track/basic_track.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/track/cover_track.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/track/video_track.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/track/timed_meta_track.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/avc_parser.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/avio_stream.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/basic_box.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/box_parser.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/hevc_parser.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/mpeg4_muxer_plugin.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/mpeg4_utils.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/muxer/mpeg4_muxer/video_parser.cpp",
    "$MEDIA_ROOT_DIR/services/media_engine/plugins/ffmpeg_adapter/common/stream_parser_manager.cpp",
  ]
  sources = mpeg4_sources + [
    "audio_muxer_demo.cpp",
    "audiomuxer_fuzzer.cpp",
    "$MEDIA_ROOT_DIR/test/unittest/avmuxer_test/mpeg4_plugin/avmuxer_mpeg4_plugin_mock_factory.cpp",
    "$MEDIA_ROOT_DIR/test/unittest/avmuxer_test/mpeg4_plugin/avmuxer_mpeg4_plugin_mock.cpp",
    "$MEDIA_ROOT_DIR/test/unittest/avmuxer_test/avmuxer_sample.cpp",
  ]

  defines = []

  if (av_codec_enable_special_codec) {
    defines += [ "AV_CODEC_AUDIO_SPECIAL_CAPACITY" ]
  }

  external_deps = [
    "c_utils:utils",
    "ffmpeg:libohosffmpeg",
    "hilog:libhilog",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
    "window_manager:libwm",
  ]
  deps = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:capi_packages",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_avmuxer",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_avsource",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_codecbase",
    "$MEDIA_ROOT_DIR/services/services:av_codec_service",
    "$MEDIA_ROOT_DIR/test/unittest/common:av_codec_inner_unit_test",
    "$MEDIA_ROOT_DIR/services/media_engine/modules:av_codec_media_engine_modules",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":AudioMuxerHevcFuzzTest",
  ]
}
###############################################################################
